--- a/Test2/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Test2/en.lproj/MainStoryboard_iPhone.storyboard
@@ -4,14 +4,14 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--View Controller - AboutView-->
+        <!--About View Controller - AboutView-->
         <scene sceneID="PCh-xC-oCV">
             <objects>
-                <viewController title="AboutView" id="yzW-1A-ZGA" sceneMemberID="viewController">
+                <viewController title="AboutView" id="yzW-1A-ZGA" customClass="AboutViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gk5-MM-Ff2">
                         <rect key="frame" x="0.0" y="20" width="320" height="499"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="ObU-zv-s8Z"/>
                 </viewController>
@@ -35,7 +35,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="300" height="114"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UXo-ZW-Yj4">
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UXo-ZW-Yj4">
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="175" id="QqX-Y1-BgT"/>
                                             </constraints>
@@ -43,7 +43,7 @@
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jke-RR-myN">
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label2" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jke-RR-myN">
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="264" id="Ica-jV-wGX"/>
                                             </constraints>
@@ -51,7 +51,7 @@
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YMb-LY-drY">
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label3" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YMb-LY-drY">
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="166" id="Y5e-gf-qsQ"/>
                                             </constraints>
@@ -59,7 +59,7 @@
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3oP-NX-bKa">
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3oP-NX-bKa">
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="113" id="YHD-a2-qbG"/>
                                             </constraints>
@@ -79,6 +79,7 @@
                                     <constraint firstItem="3oP-NX-bKa" firstAttribute="baseline" secondItem="YMb-LY-drY" secondAttribute="baseline" type="default" id="Vfv-3H-9Tw"/>
                                     <constraint firstItem="YMb-LY-drY" firstAttribute="leading" secondItem="jke-RR-myN" secondAttribute="leading" type="default" id="d0q-bX-dmk"/>
                                     <constraint firstItem="UXo-ZW-Yj4" firstAttribute="leading" secondItem="gMA-I5-Om9" secondAttribute="leading" constant="16" id="e1X-5U-5yM"/>
+                                    <constraint firstItem="3oP-NX-bKa" firstAttribute="top" secondItem="jke-RR-myN" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="mez-rP-5gz"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="firstLabel" destination="UXo-ZW-Yj4" id="suq-Db-r4P"/>
@@ -132,15 +133,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="300" height="114"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Bh-PM-n6J">
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="105" id="xGE-81-doG"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nLi-aU-Jgh">
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="left" text="Label1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nLi-aU-Jgh">
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="167" id="rEB-JB-rlF"/>
                                             </constraints>
@@ -148,7 +141,15 @@
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s1D-ss-Y3F">
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="3" contentMode="left" text="Label2" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sul-Iy-1Pt">
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="264" id="U1R-4r-fWy"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="left" text="Label3" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s1D-ss-Y3F">
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="158" id="fB4-uB-9Ip"/>
                                             </constraints>
@@ -156,9 +157,9 @@
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="3" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sul-Iy-1Pt">
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Bh-PM-n6J">
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="264" id="U1R-4r-fWy"/>
+                                                <constraint firstAttribute="width" constant="105" id="xGE-81-doG"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -168,13 +169,14 @@
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="7Bh-PM-n6J" secondAttribute="trailing" constant="32" id="6hE-EH-9dk"/>
                                     <constraint firstItem="sul-Iy-1Pt" firstAttribute="top" secondItem="nLi-aU-Jgh" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="ClV-SR-i4k"/>
                                     <constraint firstItem="7Bh-PM-n6J" firstAttribute="baseline" secondItem="s1D-ss-Y3F" secondAttribute="baseline" type="default" id="Jof-62-XNX"/>
                                     <constraint firstItem="nLi-aU-Jgh" firstAttribute="leading" secondItem="sul-Iy-1Pt" secondAttribute="leading" type="default" id="QHC-JR-1dr"/>
                                     <constraint firstItem="nLi-aU-Jgh" firstAttribute="top" secondItem="Nwy-cR-6o4" secondAttribute="top" constant="11" id="RBm-4b-CwY"/>
                                     <constraint firstAttribute="bottom" secondItem="s1D-ss-Y3F" secondAttribute="bottom" constant="13" id="TSI-BE-nyY"/>
                                     <constraint firstItem="nLi-aU-Jgh" firstAttribute="leading" secondItem="Nwy-cR-6o4" secondAttribute="leading" constant="8" id="ism-Xt-LMD"/>
+                                    <constraint firstItem="7Bh-PM-n6J" firstAttribute="top" secondItem="s1D-ss-Y3F" secondAttribute="top" type="default" id="k0h-XJ-fjq"/>
+                                    <constraint firstItem="7Bh-PM-n6J" firstAttribute="leading" secondItem="Nwy-cR-6o4" secondAttribute="leading" constant="134" id="kX4-m4-nCT"/>
                                     <constraint firstItem="sul-Iy-1Pt" firstAttribute="leading" secondItem="s1D-ss-Y3F" secondAttribute="leading" type="default" id="t2G-kc-OMS"/>
                                 </constraints>
                                 <connections>
@@ -245,6 +247,9 @@
         </scene>
     </scenes>
     <classes>
+        <class className="AboutViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AboutViewController.h"/>
+        </class>
         <class className="ByDistTableViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ByDistTableViewController.h"/>
         </class>
@@ -259,6 +264,9 @@
         </class>
         <class className="ByTimeTableViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ByTimeTableViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="deleteAction:" candidateClass="UIBarButtonItem"/>
+            </relationships>
         </class>
         <class className="ByTimeViewCell" superclassName="UITableViewCell">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ByTimeViewCell.h"/>
