--- a/Test2/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Test2/en.lproj/MainStoryboard_iPhone.storyboard
@@ -59,31 +59,19 @@
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3oP-NX-bKa">
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="113" id="YHD-a2-qbG"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        </label>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <constraints>
                                     <constraint firstItem="jke-RR-myN" firstAttribute="leading" secondItem="UXo-ZW-Yj4" secondAttribute="leading" type="default" id="1ML-GW-XmU"/>
-                                    <constraint firstAttribute="trailing" secondItem="3oP-NX-bKa" secondAttribute="trailing" constant="20" type="default" id="Blh-yU-O1o"/>
                                     <constraint firstItem="YMb-LY-drY" firstAttribute="top" secondItem="jke-RR-myN" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="Ee3-ec-V5U"/>
                                     <constraint firstItem="UXo-ZW-Yj4" firstAttribute="top" secondItem="gMA-I5-Om9" secondAttribute="top" constant="11" id="EsN-bq-W9a"/>
                                     <constraint firstItem="jke-RR-myN" firstAttribute="top" secondItem="gMA-I5-Om9" secondAttribute="top" constant="35" id="QPR-K6-4gT"/>
-                                    <constraint firstItem="3oP-NX-bKa" firstAttribute="baseline" secondItem="YMb-LY-drY" secondAttribute="baseline" type="default" id="Vfv-3H-9Tw"/>
                                     <constraint firstItem="YMb-LY-drY" firstAttribute="leading" secondItem="jke-RR-myN" secondAttribute="leading" type="default" id="d0q-bX-dmk"/>
                                     <constraint firstItem="UXo-ZW-Yj4" firstAttribute="leading" secondItem="gMA-I5-Om9" secondAttribute="leading" constant="16" id="e1X-5U-5yM"/>
-                                    <constraint firstItem="3oP-NX-bKa" firstAttribute="top" secondItem="jke-RR-myN" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="mez-rP-5gz"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="firstLabel" destination="UXo-ZW-Yj4" id="suq-Db-r4P"/>
-                                    <outlet property="fourthLabel" destination="3oP-NX-bKa" id="b4h-d8-miN"/>
                                     <outlet property="secondLabel" destination="jke-RR-myN" id="pcz-ol-BYg"/>
                                     <outlet property="thirdLabel" destination="YMb-LY-drY" id="jGr-7W-M3Z"/>
                                 </connections>
@@ -149,17 +137,10 @@
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="left" text="Label3" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s1D-ss-Y3F">
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s1D-ss-Y3F">
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="158" id="fB4-uB-9Ip"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Bh-PM-n6J">
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="105" id="xGE-81-doG"/>
+                                                <constraint firstAttribute="height" constant="21" id="pmI-O1-uga"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -170,18 +151,14 @@
                                 </view>
                                 <constraints>
                                     <constraint firstItem="sul-Iy-1Pt" firstAttribute="top" secondItem="nLi-aU-Jgh" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="ClV-SR-i4k"/>
-                                    <constraint firstItem="7Bh-PM-n6J" firstAttribute="baseline" secondItem="s1D-ss-Y3F" secondAttribute="baseline" type="default" id="Jof-62-XNX"/>
                                     <constraint firstItem="nLi-aU-Jgh" firstAttribute="leading" secondItem="sul-Iy-1Pt" secondAttribute="leading" type="default" id="QHC-JR-1dr"/>
                                     <constraint firstItem="nLi-aU-Jgh" firstAttribute="top" secondItem="Nwy-cR-6o4" secondAttribute="top" constant="11" id="RBm-4b-CwY"/>
                                     <constraint firstAttribute="bottom" secondItem="s1D-ss-Y3F" secondAttribute="bottom" constant="13" id="TSI-BE-nyY"/>
                                     <constraint firstItem="nLi-aU-Jgh" firstAttribute="leading" secondItem="Nwy-cR-6o4" secondAttribute="leading" constant="8" id="ism-Xt-LMD"/>
-                                    <constraint firstItem="7Bh-PM-n6J" firstAttribute="top" secondItem="s1D-ss-Y3F" secondAttribute="top" type="default" id="k0h-XJ-fjq"/>
-                                    <constraint firstItem="7Bh-PM-n6J" firstAttribute="leading" secondItem="Nwy-cR-6o4" secondAttribute="leading" constant="134" id="kX4-m4-nCT"/>
                                     <constraint firstItem="sul-Iy-1Pt" firstAttribute="leading" secondItem="s1D-ss-Y3F" secondAttribute="leading" type="default" id="t2G-kc-OMS"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="firstLabel" destination="nLi-aU-Jgh" id="KGz-Yd-D6U"/>
-                                    <outlet property="fourthLabel" destination="7Bh-PM-n6J" id="ipK-24-Qed"/>
                                     <outlet property="secondLabel" destination="sul-Iy-1Pt" id="8Nl-6i-8bi"/>
                                     <outlet property="thirdLabel" destination="s1D-ss-Y3F" id="d5N-eJ-QKn"/>
                                 </connections>
@@ -246,48 +223,6 @@
             <point key="canvasLocation" x="132" y="180"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="AboutViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/AboutViewController.h"/>
-        </class>
-        <class className="ByDistTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ByDistTableViewController.h"/>
-        </class>
-        <class className="ByDistViewCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ByDistViewCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="firstLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="fourthLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="secondLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="thirdLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="ByTimeTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ByTimeTableViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="deleteAction:" candidateClass="UIBarButtonItem"/>
-            </relationships>
-        </class>
-        <class className="ByTimeViewCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ByTimeViewCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="firstLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="fourthLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="secondLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="thirdLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="MapViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MapViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
-                <relationship kind="outlet" name="recipeLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
